写好问题详情接口
