# service/problem.go
@@ -4,6 +4,7 @@ import (
 	"gin_gorm_oj/define"
 	"gin_gorm_oj/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"strconv"
@@ -47,5 +48,44 @@ func GetProblemList(c *gin.Context) {
 			"data":  &list,
 			"count": count,
 		},
+	})
+}
+
+// GetProblemList
+// @Tags 公共方法
+// @Summary 问题详情
+// @Param identity query string false "problem identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problem-detail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "问题唯一标识不能为空",
+		})
+		return
+	}
+	data := new(models.ProblemBasic)
+	err := models.DB.Where("identity = ?", identity).
+		Preload("ProblemCategories").Preload("ProblemCategories.CategoryBasic").First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "当前问题不存在",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get ProblemDetail Error:" + err.Error(),
+		})
+		return
+
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": -1,
+		"data": data,
 	})
 }
